--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,57 @@ body
     transform-origin: 100% 0;
     transition: transform 1.5s ease-in-out;
 }
+
+.point {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point:hover .text {
+    opacity: 1;
+}
+
+.point.visible .label {
+    transform: scale(1, 1);
+}
+
+.point .label {
+    position: absolute;     
+    /* Center the square by anchoring it in the center */
+    top: -20px;         
+    left: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #00000077;      /* Control the alpha by adding 77 */
+    color: #ffffff;
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
+    line-height: 40px;   /* A way to vertically align the text */
+    font-weight: 100;
+    font-size: 14px;
+    cursor: help;
+    transform: scale(0.01, 0.01);   /* Hiding the point */  
+    transition: transform 0.3s;
+}
+
+
+.point .text {
+    position: absolute;
+    top: 30px;
+    left: -120px;
+    width: 200px;
+    padding: 20px;
+    border-radius: 4px;
+    background: #00000077; 
+    color: #ffffff;
+    line-height: 1.3em;
+    text-align: center;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    font-size: 14px;
+    opacity: 0;     /* initial state: hidden */
+    transition: opacity 0.3s;
+    pointer-events: none;  /* stop hover from triggering on .text */
+}
